[package]
name = "waytoodeep"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
futures = "0.3.16"
tokio = { version = "1.9.0", features = ["full"] }
tokio-rustls = "0.22.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
webpki-roots = "0.21.1"
